--- a/index.html
+++ b/index.html
@@ -1,153 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ez egy weblap</title>
 </head>
+
 <body>
-   <h1>üdvözöllek
-   </h1> 
-   <h3>üdvözöllek
-</h3>
-<h6>üdvözöllek
-</h6> 
+    <ul>
+        <li>
+            <a href="/">Home</a>
+        </li>
+        <li>
+            <a href="/pages/products.html">Products</a>
+        </li>
+        <li>
+            <a href="/pages/orders.html">Orders</a>
+        </li>
+        <li>
+            <a href="/about.html">About</a>
+        </li>
+        </li>
+    </ul>
+    <h1>Fantastic Burger</h1>
+    <ul>
+        <li>Meat lover</li> 
+        <ol> <li>beef</li> <ol> <li>pork</li> <li>turkey</li></ol> </ol>
+    </li>
+        <li>Vegetarian</li>
+        <li>Piedone</li>
+    </ul>
+    <h2>Step for order</h2>
+    <OL>
+        <li>choose a burger</li>
+        <li>buy it</li>
+        <li> give your adress</li>
+        <li>eat it</li>
+    </OL>
+    <a target="blank" href="http://istvanffi.hu/">istvánffi Burger</a>
+    <a href="pages/orders.html">orders</a>
+    <a target="blank" href="http://istvanffi.hu/"><img width=56 src="img/burger.jpg " alt="tasty burger"></a>
 
-    this is a paragraph
-
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<h2 id="ide">idegyere</h2>
-<p>
-    this is a paragraph
-</p>
-<p id="fa">
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    this is a paragraph
-</p>
-<p>
-    ez egy <i><b>nagyon fontos</b></i> 
-    <b>szöveg</b> 
-</p>
+    <img src="img/burger.jpg" alt="tasty burger">
 </body>
+
 </html>
