--- a/pages/products.html
+++ b/pages/products.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Document</title>
 </head>
-
 <body>
     <ul>
         <li>
@@ -23,22 +21,6 @@
         </li>
         </li>
     </ul>
-    <table>
-       <caption> <b>Opening hours</b> </caption>
-        <tr>
-            <td>Monday-Friday</td>
-            <td>09:00</td>
-            <td>21:00</td>
-        </tr> <tr>
-            <td>Saturday</td>
-            <td>09:00</td>
-            <td>24:00</td>
-        </tr> <tr>
-            <td>Sunday</td>
-            <td>09:00</td>
-            <td>12:00</td>
-        </tr>
-    </table>
+    
 </body>
-
 </html>
